# ML-Recipes

./: README.md  fast-ai-pokemon-or-digimon.ipynb
Computer Vision/Extract_Text_From_Image/docs/: OCR.ipynb
Computer Vision/Extract_Text_From_Image/src/extract_text_from_image/: __init__.py  extract_text_from_image.py
Computer Vision/Extract_Text_From_Image/tests/: __init__.py
Computer Vision/Open CV Watermarking/docs/: Watermarking.ipynb
Computer Vision/Open CV Watermarking/src/: main.py
Computer Vision/Yolo/: Yolo-with-Gradio.ipynb
Ensemble_From_Scratch/: README.md
Extract_Text_From_Image/: .travis.yml  CONTRIBUTING.rst  Makefile  README.rst  pyproject.toml  tox.ini
Extract_Text_From_Image/docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
Extract_Text_From_Image/tests/: test_extract_text_from_image.py
HuggingFace/Translator FR-EN/: README.md
HuggingFace/Translator FR-EN/src/: app.py
Image Classification Fastai/: Cat_Image-Classification.ipynb  Image_Classification_Fastai_Batman.ipynb  fastai-Vision-Task-Cat-or-Dog.ipynb  fastai_cat_vision_task.ipynb
Image Classification Fastai/docs/: fastai-vision-task-cat-or-dog.ipynb
KNN Recomender System/: README.md
KNN Recomender System/docs/: KNN_Recomender__System.ipynb
MambaOut Species Class/data/: mambaout_species_classification.ipynb
Open CV Watermarking/src/: pyproject.toml
Reconhecimento de Dígitos Manuscritos com Pytorch/: computer-vision-with-pytorch-handwritten-digit-re.ipynb
Streamlit/life saver/: main.py
Streamlit/life saver/pages/: author.py
