[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "extract_text_from_image"
version = "0.1.0"
description = "The objective of the script is to extract text from images."
readme = "README.rst"
authors = [
  {name = "Carlos A. Lima", email = "casl2@aluno.ifal.edu.br"}
]
maintainers = [
  {name = "Carlos A. Lima", email = "casl2@aluno.ifal.edu.br"}
]
classifiers = [

]
license = {text = "Not open source"}
dependencies = [
  
]

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]

[project.urls]

bugs = "https://github.com/Cllspy/extract_text_from_image/issues"
changelog = "https://github.com/Cllspy/extract_text_from_image/blob/master/changelog.md"
homepage = "https://github.com/Cllspy/extract_text_from_image"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]




# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

